# aoc2022

./: Cargo.toml
day-01/src/: main.rs
day-03/src/: main.rs
day-04/src/: main.rs
day-05/src/: main.rs
day-06/src/: main.rs
day-07/src/: main.rs
day-08/src/: main.rs
day-1/src/: main.rs
day-10/src/: main.rs
day-11/src/: main.rs
day-12/src/: main.rs
day-13/src/: main.rs
day-14/src/: main.rs
day-15/src/: main.rs
day-16/src/: main.rs
day-17/src/: main.rs
day-18/src/: main.rs
day-19/src/: main.rs
day-2/src/: main.rs
day-20/src/: main.rs
day-21/src/: main.rs
day-22/src/: main.rs
day-23/src/: main.rs
day-24/src/: main.rs
day-25/src/: main.rs
day-3/src/: main.rs
day-4/src/: main.rs
day-5/src/: main.rs
day-6/src/: main.rs
day-7/src/: main.rs
day-8/src/: main.rs
day-9/src/: main.rs
