[workspace]
members = [
    "day-01",
    "day-02",
    "day-03",
    "day-04",
    "day-05",
    "day-06",
    "day-07",
    "day-08",
    "day-09",
    "day-10",
    "day-11",
    "day-12",
    "day-13",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
